# serializer version: 1
# name: test_smart_blinds_states[tests/fixtures/smart-blinds-closed.yaml]
  tuple(
    'closed',
    ReadOnlyDict({
      <CoverEntityStateAttribute.CURRENT_POSITION: 'current_position'>: 0,
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'blind',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Left Shade',
      <CoverEntityStateAttribute.IS_CLOSED: 'is_closed'>: True,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CoverEntityFeature.OPEN|CLOSE|SET_POSITION: 7>,
    }),
  )
# ---
# name: test_smart_blinds_states[tests/fixtures/smart-blinds-open.yaml]
  tuple(
    'open',
    ReadOnlyDict({
      <CoverEntityStateAttribute.CURRENT_POSITION: 'current_position'>: 100,
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'blind',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Left Shade',
      <CoverEntityStateAttribute.IS_CLOSED: 'is_closed'>: False,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CoverEntityFeature.OPEN|CLOSE|SET_POSITION: 7>,
    }),
  )
# ---
